Responsive layour tablet. Fix the overflow and the contact next

--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -131,3 +131,34 @@
   cursor: pointer;
   color: #4ee1a0;
 }
+
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #242424;
+    padding: 30px 0;
+    position: relative;
+  }
+
+  .form form {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    font-size: 18px;
+    gap: 20px;
+    margin-top: 20px;
+    position: relative;
+  }
+
+  .info {
+    text-align: center;
+  }
+
+  .form input,
+  textarea {
+    padding: 15px;
+  }
+}
