--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -29,7 +29,7 @@
   z-index: 1;
 }
 .icon {
-  color: #151515;
+  color: #242424;
 }
 
 .icon:hover {
