--- a/src/Components/Projects/ProjectCard.module.css
+++ b/src/Components/Projects/ProjectCard.module.css
@@ -62,11 +62,29 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    position: relative;
   }
 
   .container img {
     width: 320px;
+  }
+
+  .overlay {
+    display: flex;
+    gap: 10px;
+    line-height: 29px;
+    font-size: 16px;
+    opacity: 1;
+    transition: none;
+    position: static;
+    justify-content: flex-start;
+    flex-direction: row;
+    align-items: center;
+    height: auto;
+    background-color: #151515;
+    font-size: 16px;
+  }
+
+  .overlay:hover {
   }
 }
 @media screen and (max-width: 767px) {
